--- a/public/calender.html
+++ b/public/calender.html
@@ -142,8 +142,7 @@
             }
         });
         
-        // (ここにカレンダー関連の残りのJavaScriptを記述)
-        // ... listCalendarEvents, reflect-events-btn listener, etc.
+        // ... (この下にカレンダー関連の残りのJavaScriptが続きます) ...
     </script>
 </body>
 </html>
