そろそろ飽きてきた

--- a/public/calendar.html
+++ b/public/calendar.html
@@ -67,8 +67,8 @@
         // ただし、Google Calendar APIは別途APIキーやOAuthクライアントIDが必要な場合があるため、
         // ここでは仮のプレースホルダーを置いています。
         // 実際の値はGoogle Cloud Consoleで取得してください。
-        const GOOGLE_CLIENT_ID = "YOUR_GOOGLE_CLIENT_ID_FROM_GOOGLE_CLOUD_CONSOLE"; 
-        const GOOGLE_API_KEY = "YOUR_GOOGLE_API_KEY_FROM_GOOGLE_CLOUD_CONSOLE"; 
+        const GOOGLE_CLIENT_ID = "887116583823-32evpk9fa2m0ondbbco6tv4m1980i7bj.apps.googleusercontent.com"; 
+        const GOOGLE_API_KEY = "AIzaSyBuRc0oRFQk-GvVAh_90S9NGAYu5sOkxyM"; 
         const GOOGLE_DISCOVERY_DOCS = ["https://www.googleapis.com/discovery/v1/apis/calendar/v3/rest"];
         const GOOGLE_SCOPES = "https://www.googleapis.com/auth/calendar.events.readonly"; // 読み取り専用スコープ
 
